--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -86,6 +86,8 @@ body {
 	}
 	// Сайт завантажений
 	.loaded & {
+		opacity: 1;
+		transition: opacity 0.4s ease;
 	}
 }
 // Оболонка wrapper ============================================================================================================================================================================================================================================================================================================================================================================================================================================
