--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -248,26 +248,8 @@ summary {
   z-index: 1;
 }
 
-.backgr::before {
-  content: "";
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("../img/background/LoopableNoise.gif");
-  background-position: top;
-  opacity: 0.08;
-}
-
 .backgr_dark {
   background-color: #1A1A1A;
-}
-
-.backgr_dark::before {
-  background-size: 21.875rem;
-  background-repeat: repeat;
 }
 
 .backgr_light {
@@ -544,8 +526,9 @@ summary {
 .spollers__title {
   font-weight: 800;
   line-height: 0.7;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin-left: 6.25rem;
 }
 
@@ -802,7 +785,7 @@ summary {
   -webkit-text-decoration: 0.375rem underline;
           text-decoration: 0.375rem underline;
   text-decoration-color: rgba(30, 100, 246, 0.5);
-  text-underline-offset: 0px;
+  text-underline-offset: 3px;
 }
 
 .main__slider {
@@ -823,9 +806,9 @@ summary {
 .main-slider__slide {
   position: relative;
   opacity: 0;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
   pointer-events: none;
 }
 
@@ -1007,7 +990,7 @@ summary {
   position: absolute;
   bottom: -45%;
   right: -15%;
-  background: #cfcfcf;
+  background-color: #FEFDFB;
   -webkit-filter: blur(100px);
           filter: blur(100px);
   opacity: 0.9;
