--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -14,7 +14,7 @@ summary {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
   img {
     position: relative;
@@ -63,7 +63,7 @@ summary {
      width: 120%; 
   }
   &_light {
-    opacity: 0.2;
+    opacity: 0.3;
   }
   // .text-backgr__txt
   &__txt {
@@ -74,9 +74,13 @@ summary {
 
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-color: #383838;
-    -webkit-text-stroke-width: 2px; 
-    @media (max-width:$mobile){
-      -webkit-text-stroke-width: 1px
+    -webkit-text-stroke-width: 1px; 
+   
+    .text-backgr__txt_light & {
+      -webkit-text-stroke-width: 2px; 
+      @media (max-width:$mobile){
+        -webkit-text-stroke-width: 1px
+      }
     }
 
     &:nth-child(1){
@@ -126,7 +130,12 @@ summary {
   text-transform: uppercase;
   color: $black-00;
 }
-
+.title-third {
+  font-weight: 800;
+  @include adaptiveValue("font-size", 48, 30);
+  line-height: calc(52/48);
+  color: $white-ff;
+}
 .subtitle {
   font-weight: 700;
   @include adaptiveValue("font-size", 24, 18);
@@ -169,7 +178,29 @@ summary {
   }
 }
 
+// == DECOR PLUS ==========================================
+.decor-plus {
+  display: block;
+  position: relative;
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: rem(38);
+    width: rem(122);
+    height: rem(1);
+    background-color: $blue-56-FF;
+    @media (max-width:$mobile){
+       display: none; 
+    }
+  }
+  &::after {
+    transform: rotate(90deg);
+  }
+}
 
+// == PRODUCTS CARDS ========================================
 .card-products {
   @include adaptiveValue("width", 270, 253);
   @include adaptiveValue("height", 354, 332);
@@ -284,7 +315,7 @@ summary {
   }
 }
 
-
+// == SPOLLERS ============================================
 .spollers {
 	&.spollers_dark {
     
@@ -381,81 +412,127 @@ summary {
 }
 
 
-.spollers-project {
-	// .spollers-project__wrapper
-	&__wrapper {
-    color: white;
-    display: grid;
-    grid-template-columns: 53% 47%;
-    padding-top: rem(28);
-    padding-bottom: rem(45);
-    position: relative;
-    @media (max-width: em(900)){
-        grid-template-columns: 100%;
-        padding-top: 0;
-    }
-    @media (max-width:$mobileSmall){
-      // overflow-y: auto; 
-      // height: rem(490);
-    }
-	}
-  // .spollers-project__img-ibg
-  &__img-ibg {
-    height: 100%;
-    max-height: rem(420);
-    @media (max-width: em(550)){
-        max-height: rem(260);
-        overflow: hidden;
-    }
-  }
-  // .spollers-project__info
-  &__info {
-    margin: 0 rem(50) 0 rem(67);
-    @media (max-width: em(1100)){
-        margin: 0 rem(30);
-    }
-    @media (max-width: em(900)){
-        margin: 0;
-    }
-
-  }
-  // .spollers-project__title
-  &__title {
-    font-style: italic;
+// === SHOW MORE BUTTONS ===================
+[data-showmore] {
+}
+[data-showmore-content] {
+}
+[data-showmore-button] {
+  padding: rem(21) rem(21) 0 0;
+	span {
+    display: block;
+    font-size: rem(50);
     font-weight: 300;
-    @include adaptiveValue("font-size", 30, 22);
-    line-height: calc(34/30);
-    text-transform: uppercase;
-    @include adaptiveValue("margin-bottom", 21, 28);
-    @media (max-width: em(900)){
-        text-align: left;
-        margin-left: rem(65);
-    }
-    @media (max-width:$mobileSmall){
-       margin-left: rem(40); 
-    }
-  }
-  // .spollers-project__txt
-  &__txt {
-    font-weight: 400;
-    @include adaptiveValue("font-size", 18, 20);
-    line-height: calc(22/18);
-    color: $gray-99;
-    span {
-      text-decoration: rem(5) underline;
-      text-decoration-color: rgba(30, 100, 246, 0.5);
-      text-underline-offset: 3px;
+    line-height: 0.5;
+    color: $black-00;
+    transition: all 0.5s linear;
+    .footer & {
       color: $white-ff;
     }
-    
-    &:not(:last-child) {
-      margin-bottom: rem(15);
-    }
+		._showmore-active & {
+			transform: rotate(-135deg)
+		}
+	}
+}
+
+
+// == SECTION PARTNERS ==========================================
+.partners {
+  @include adaptiveValue("padding-top", 190, 75);
+  @include adaptiveValue("padding-bottom", 190, 75);
+  position: relative;
+  // .partners__container
+  &__container {
+    position: relative;
+    display: flex;
     @media (max-width: em(900)){
-      margin-top: rem(24);
+        flex-direction: column;
+        row-gap: rem(57);
+    }
+  }
+  // .partners__head
+  &__head {
+    position: relative;
+    z-index: 3;
+  }
+  // .partners__title
+  &__title {
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 60, 32);
+    }
+  }
+  // .partners__list
+  &__list {
+    @include adaptiveValue("margin-left", 67, 47, 3, 480, 360);
+  }
+  // .partners__content
+  &__content {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: repeat(8,auto);
+    grid-auto-flow: column;
+    column-gap: rem(59);
+    max-width: rem(500);
+    @media (max-width: em(550)){
+        column-gap: rem(20);
     }
     @media (max-width:$mobileSmall){
-      margin-left: rem(40); 
-   }
+       grid-template-columns: auto;
+        grid-auto-flow: row;
+        padding-top: rem(1);
+    }
   }
+  // .partners__item
+  &__item {
+    font-weight: 400;
+    font-size: rem(16);
+    line-height: calc(30/16);
+    text-transform: uppercase;
+    span {
+      font-weight: 400;
+      font-size: rem(12);
+      line-height: calc(30/12);
+      color: $gray-90;
+      padding-left: rem(5);
+      position: relative;
+      top: rem(-12);
+    }
+  }
+  // .partners__more
+  &__more {
+  }
+  // .partners__img-ibg
+  &__img-ibg {
+    position: absolute;
+    width: max-content;
+    height: 126%;
+    top: 0;
+    right: 0;
+    @media (max-width: em(900)){
+        position: relative;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: unset;
+    }
+    img {
+      @media (max-width:$mobileSmall){
+         width: 151%;
+         left: -47%; 
+      }
+    }
+  }
+	// .partners__decor-plus
+	&__decor-plus {
+	}
+	// .partners__label
+	&__label {
+    position: absolute;
+    top: 0;
+    right: rem(16);
+    transform: rotate(0deg);
+	}
 }
+
+
